--- a/content/main/main.html
+++ b/content/main/main.html
@@ -9,7 +9,7 @@
 	<meta http-equiv="Cache-Control" content="No-Cache" />
 	<meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1" />
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>퍼스트엑씨앤씨</title>
+	<title>FIRST ACT C&amp;C</title>
 
 	<!-- CSS -->
 	<link rel="preconnect" href="https://fonts.googleapis.com">
